feat: Prepare for public release
- Backend: Add safety caps for max delay (10s) and response payload size.
- Frontend: Use environment variable (VITE_API_BASE_URL) for API endpoint.
- Frontend: Add OGP meta tags for better SNS sharing.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>Flaky API | Chaos Engineering for Frontend</title>
+    <meta name="description" content="意図的に遅延やエラーを発生させるモックAPI生成ツール。ローディング画面やエラー処理のテストに。" />
+    <meta property="og:title" content="Flaky API Generator" />
+    <meta property="og:description" content="あなたのアプリ、回線が悪くても動きますか？遅延・エラーを自在に操るAPIモックサーバー。" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://(あなたのFirebaseのURL).web.app" />
+    <meta property="og:image" content="https://(あなたのFirebaseのURL).web.app/ogp.png" />
+    <meta name="twitter:card" content="summary_large_image" />
   </head>
   <body>
     <div id="root"></div>
