feat: Prepare for public release
- Backend: Add safety caps for max delay (10s) and response payload size.
- Frontend: Use environment variable (VITE_API_BASE_URL) for API endpoint.
- Frontend: Add OGP meta tags for better SNS sharing.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,8 +9,8 @@
     <meta property="og:title" content="Flaky API Generator" />
     <meta property="og:description" content="あなたのアプリ、回線が悪くても動きますか？遅延・エラーを自在に操るAPIモックサーバー。" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://(あなたのFirebaseのURL).web.app" />
-    <meta property="og:image" content="https://(あなたのFirebaseのURL).web.app/ogp.png" />
+    <meta property="og:url" content="https://flaky-api-dev01.web.app" />
+    <meta property="og:image" content="https://flaky-api-dev01.web.app/ogp.png" />
     <meta name="twitter:card" content="summary_large_image" />
   </head>
   <body>
