--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
     <meta name="twitter:card" content="summary_large_image" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="margin: auto;"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
