--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
     <meta property="og:description" content="あなたのアプリ、回線が悪くても動きますか？遅延・エラーを自在に操るAPIモックサーバー。" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://flaky-api-dev01.web.app" />
-    <meta property="og:image" content="https://flaky-api-dev01.web.app/ogp.png" />
+    <meta property="og:image" content="https://flaky-api-dev01.web.app/ogp.png?v=2" />
     <meta name="twitter:card" content="summary_large_image" />
   </head>
   <body>
