--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/ogp.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flaky API | Chaos Engineering for Frontend</title>
     <meta name="description" content="意図的に遅延やエラーを発生させるモックAPI生成ツール。ローディング画面やエラー処理のテストに。" />
